@@ -16,7 +16,7 @@ import java.util.*;
 /** Adjusts native cast duration and delegates each configured burst to the native spell's onCast. */
 public final class ChargeService {
     private static final class Charge {
-        String spell;int slot,levels,base;double strength=-1;long started,released=-1;boolean completed;
+        String spell;int slot,levels,base,baseLevel,tempoUnits=1,committingUnits;double strength=-1;long started,released=-1;boolean completed;
         ChargeDefinition options;
         Charge(String spell,int slot,int levels,long started,ChargeDefinition options){this.spell=spell;this.slot=slot;this.levels=levels;this.started=started;this.options=options;}
         double stages(long now){return options.stages((released<0?now:released)-started,base,levels);}
@@ -33,8 +33,10 @@ public final class ChargeService {
         var definition=MasteryRuntime.definitions().spells().get(spell);
         if(definition==null)return;
         var charge=com.cappleapple.mastery.data.ChargeDefinition.parse(spell,SpellService.spellSettings(player,spell).getAsJsonObject("charge"));
-        if(charge.enabled()&&SpellRegistry.getSpell(spell).getCastType()!=CastType.CONTINUOUS)
-            CHARGES.put(player.getUUID(),new Charge(spell,slot,stackedLevels(player,spell),player.level().getGameTime(),charge));
+        if(charge.enabled()&&SpellRegistry.getSpell(spell).getCastType()!=CastType.CONTINUOUS) {
+            var state=new Charge(spell,slot,stackedLevels(player,spell),player.level().getGameTime(),charge);
+            state.baseLevel=SpellService.effectiveLevel(player,spell);CHARGES.put(player.getUUID(),state);
+        }
     }
     public static int duration(ServerPlayer player,String spell,int nativeTicks) {
         var charge=CHARGES.get(player.getUUID());
@@ -44,6 +46,16 @@ public final class ChargeService {
         var hud=new com.google.gson.JsonObject();hud.addProperty("spell",spell);hud.addProperty("base",charge.base);
         hud.addProperty("levels",Math.clamp(charge.levels,1,charge.options.maxLevels()));hud.addProperty("ticks_per_level",charge.options.ticksPerLevel());
         hud.addProperty("total",total);
+        var markers=new com.google.gson.JsonArray();int previousCost=1;
+        double scale=charge.options.spellLevelsPerStage();
+        var nativeSpell=SpellRegistry.getSpell(spell);
+        for(int bonus=1;bonus<=Math.floor(Math.clamp(charge.levels,1,charge.options.maxLevels())*scale);bonus++) {
+            int level=(int)Math.clamp((long)charge.baseLevel+bonus,1,Integer.MAX_VALUE);
+            int cost=com.cappleapple.mastery.integration.TempoHeldCharges.units(player,nativeSpell,charge.baseLevel,level);
+            if(cost>previousCost)markers.add(charge.base+(int)Math.ceil(bonus/scale*charge.options.ticksPerLevel()));
+            previousCost=cost;
+        }
+        hud.add("charge_cost_markers",markers);
         com.cappleapple.mastery.network.MasteryNetwork.send(player,"charge",hud.toString());
         return total;
     }
@@ -65,7 +77,30 @@ public final class ChargeService {
     public static int nativeLevel(ServerPlayer player,String spell,int original) {
         var charge=CHARGES.get(player.getUUID());
         if(charge==null||!charge.spell.equals(spell))return original;
-        return (int)Math.clamp(original+(long)Math.floor(strength(player,charge)*charge.options.spellLevelsPerStage()),1,Integer.MAX_VALUE);
+        double stages=strength(player,charge),scale=charge.options.spellLevelsPerStage();
+        var nativeSpell=SpellRegistry.getSpell(spell);
+        int budget=com.cappleapple.mastery.integration.TempoHeldCharges.budget(player,nativeSpell,charge.baseLevel);
+        int bonus=(int)Math.floor(stages*scale),level=original;
+        while(bonus>=0) {
+            level=(int)Math.clamp(original+(long)bonus,1,Integer.MAX_VALUE);
+            int cost=com.cappleapple.mastery.integration.TempoHeldCharges.units(player,nativeSpell,charge.baseLevel,level);
+            if(cost<=Math.max(1,budget)||bonus==0){charge.tempoUnits=cost;break;}
+            bonus--;
+            stages=Math.min(stages,Math.max(0,(bonus+1)/scale-1.0/charge.options.ticksPerLevel()));
+        }
+        charge.strength=stages;
+        return level;
+    }
+    public static int beginTempoCommit(ServerPlayer player,String spell) {
+        var charge=CHARGES.get(player.getUUID());
+        if(charge==null||!charge.spell.equals(spell)||!charge.completed)return 1;
+        charge.committingUnits=charge.tempoUnits;return charge.tempoUnits;
+    }
+    public static void finishTempoCommit(ServerPlayer player,String spell) {
+        var charge=CHARGES.get(player.getUUID());
+        if(charge==null||!charge.spell.equals(spell)||charge.committingUnits==0)return;
+        int units=charge.committingUnits;charge.committingUnits=0;
+        com.cappleapple.mastery.integration.TempoHeldCharges.finish(player,spell,units);
     }
     public static void cast(ServerPlayer player,String spell,int level) {
         var charge=CHARGES.get(player.getUUID());
